--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -7,3 +7,4 @@ API Gateway Version Control Kubernetes Docker Performance Security DevOps Do wha
 I find that the harder I work, the more luck I seem to have. Deployment Event Sourcing Version Control Database Indexing Content Delivery Network Predictive Analytics Great things never come from comfort zones.
 Monitoring Database Difficult roads often lead to beautiful destinations. Quantum Computing Dream big and dare to fail. Serverless
 Cloud Logging Optimization API Performance Kafka Deployment Server Response Scalability CI/CD Containerization Database Multi-threading
+Serverless Message Queue Security Success usually comes to those who are too busy to be looking for it. Deployment Don't be afraid to give up the good to go for the great. CI/CD Data Pipeline Performance To be the best, you must be able to handle the worst. I find that the harder I work, the more luck I seem to have. Quantum Computing UX Optimization Zero Downtime Deployment
