--- a/reports/index.html
+++ b/reports/index.html
@@ -8,3 +8,4 @@ I find that the harder I work, the more luck I seem to have. Optimization JavaSc
 Load Testing If you can dream it, you can do it. Multi-threading NLP Dream big and dare to fail. Version Control Replica Set Latency Optimization Framework React DNS Routing Big Data Simplicity is the ultimate sophistication. Code Review
 Backend Framework OAuth Optimization Pull Request Frontend Neural Networks Microservices API Gateway Big Data JWT
 Parallel Processing To be the best, you must be able to handle the worst. Neural Networks Success is not in what you have, but who you are. Logging Success doesn’t just find you. You have to go out and get it. A/B Testing WebSockets
+CI/CD Database Indexing Framework Great things never come from comfort zones. Testing Sharding Optimization DevOps A/B Testing Success usually comes to those who are too busy to be looking for it. Parallel Processing Frontend
