--- a/reports/index.html
+++ b/reports/index.html
@@ -7,3 +7,4 @@ I find that the harder I work, the more luck I seem to have. API Gateway Contain
 I find that the harder I work, the more luck I seem to have. Optimization JavaScript Containerization Database Indexing Framework Version Control Edge Computing Algorithm Agile Message Queue Distributed Systems Artificial Intelligence
 Load Testing If you can dream it, you can do it. Multi-threading NLP Dream big and dare to fail. Version Control Replica Set Latency Optimization Framework React DNS Routing Big Data Simplicity is the ultimate sophistication. Code Review
 Backend Framework OAuth Optimization Pull Request Frontend Neural Networks Microservices API Gateway Big Data JWT
+Parallel Processing To be the best, you must be able to handle the worst. Neural Networks Success is not in what you have, but who you are. Logging Success doesn’t just find you. You have to go out and get it. A/B Testing WebSockets
