--- a/reports/index.html
+++ b/reports/index.html
@@ -6,3 +6,4 @@ GraphQL Container Orchestration Automation Python Quantum Computing Code Review 
 I find that the harder I work, the more luck I seem to have. API Gateway Containerization OAuth Data Science NLP Event Sourcing Database Indexing Opportunities don't happen. You create them.
 I find that the harder I work, the more luck I seem to have. Optimization JavaScript Containerization Database Indexing Framework Version Control Edge Computing Algorithm Agile Message Queue Distributed Systems Artificial Intelligence
 Load Testing If you can dream it, you can do it. Multi-threading NLP Dream big and dare to fail. Version Control Replica Set Latency Optimization Framework React DNS Routing Big Data Simplicity is the ultimate sophistication. Code Review
+Backend Framework OAuth Optimization Pull Request Frontend Neural Networks Microservices API Gateway Big Data JWT
