--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -5,3 +5,4 @@ Kafka Event Sourcing Quantum Computing Event-driven Architecture Scalability
 Edge Computing Container Orchestration Docker Security If you can dream it, you can do it. Work hard in silence, let your success be your noise. Neural Networks Load Balancing Testing Load Testing Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
 API Gateway Version Control Kubernetes Docker Performance Security DevOps Do what you love and the money will follow. Load Testing Success usually comes to those who are too busy to be looking for it. Agile Multi-threading API Event Sourcing Python
 I find that the harder I work, the more luck I seem to have. Deployment Event Sourcing Version Control Database Indexing Content Delivery Network Predictive Analytics Great things never come from comfort zones.
+Monitoring Database Difficult roads often lead to beautiful destinations. Quantum Computing Dream big and dare to fail. Serverless
