--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -3,3 +3,4 @@ The only way to do great work is to love what you do. Machine Learning Container
 Predictive Analytics CI/CD Data Pipeline Cloud Functions Server Response Lambda Functions JWT Innovation distinguishes between a leader and a follower. Kafka Security DNS Routing Scalability
 Kafka Event Sourcing Quantum Computing Event-driven Architecture Scalability
 Edge Computing Container Orchestration Docker Security If you can dream it, you can do it. Work hard in silence, let your success be your noise. Neural Networks Load Balancing Testing Load Testing Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
+API Gateway Version Control Kubernetes Docker Performance Security DevOps Do what you love and the money will follow. Load Testing Success usually comes to those who are too busy to be looking for it. Agile Multi-threading API Event Sourcing Python
