--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -2,3 +2,4 @@ Quantum Computing Replica Set Agile Success usually comes to those who are too b
 The only way to do great work is to love what you do. Machine Learning Container Orchestration Monitoring Opportunities don't happen. You create them. WebSockets Virtual Machines Kafka DNS Routing DevOps
 Predictive Analytics CI/CD Data Pipeline Cloud Functions Server Response Lambda Functions JWT Innovation distinguishes between a leader and a follower. Kafka Security DNS Routing Scalability
 Kafka Event Sourcing Quantum Computing Event-driven Architecture Scalability
+Edge Computing Container Orchestration Docker Security If you can dream it, you can do it. Work hard in silence, let your success be your noise. Neural Networks Load Balancing Testing Load Testing Simplicity is the ultimate sophistication. Stay hungry, stay foolish.
