--- a/reports/index.html
+++ b/reports/index.html
@@ -4,3 +4,4 @@ Zero Downtime Deployment Load Testing JWT UX Optimization API Gateway Optimizati
 GraphQL Success doesn’t just find you. You have to go out and get it. Cache Invalidation Optimization Monitoring Edge Computing Load Testing Python DevOps Predictive Analytics Success usually comes to those who are too busy to be looking for it. Container Orchestration JavaScript Innovation distinguishes between a leader and a follower. UX Optimization
 GraphQL Container Orchestration Automation Python Quantum Computing Code Review Virtual Machines
 I find that the harder I work, the more luck I seem to have. API Gateway Containerization OAuth Data Science NLP Event Sourcing Database Indexing Opportunities don't happen. You create them.
+I find that the harder I work, the more luck I seem to have. Optimization JavaScript Containerization Database Indexing Framework Version Control Edge Computing Algorithm Agile Message Queue Distributed Systems Artificial Intelligence
