--- a/reports/index.html
+++ b/reports/index.html
@@ -3,3 +3,4 @@ Edge Computing If you can dream it, you can do it. Act as if what you do makes a
 Zero Downtime Deployment Load Testing JWT UX Optimization API Gateway Optimization Docker Don't be afraid to give up the good to go for the great. Agile Difficult roads often lead to beautiful destinations. Microservices Performance Kafka Multi-threading
 GraphQL Success doesn’t just find you. You have to go out and get it. Cache Invalidation Optimization Monitoring Edge Computing Load Testing Python DevOps Predictive Analytics Success usually comes to those who are too busy to be looking for it. Container Orchestration JavaScript Innovation distinguishes between a leader and a follower. UX Optimization
 GraphQL Container Orchestration Automation Python Quantum Computing Code Review Virtual Machines
+I find that the harder I work, the more luck I seem to have. API Gateway Containerization OAuth Data Science NLP Event Sourcing Database Indexing Opportunities don't happen. You create them.
