--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -1,2 +1,3 @@
 Quantum Computing Replica Set Agile Success usually comes to those who are too busy to be looking for it. Event Sourcing A/B Testing
 The only way to do great work is to love what you do. Machine Learning Container Orchestration Monitoring Opportunities don't happen. You create them. WebSockets Virtual Machines Kafka DNS Routing DevOps
+Predictive Analytics CI/CD Data Pipeline Cloud Functions Server Response Lambda Functions JWT Innovation distinguishes between a leader and a follower. Kafka Security DNS Routing Scalability
