--- a/reports/dashboard.html
+++ b/reports/dashboard.html
@@ -1,1 +1,2 @@
 Quantum Computing Replica Set Agile Success usually comes to those who are too busy to be looking for it. Event Sourcing A/B Testing
+The only way to do great work is to love what you do. Machine Learning Container Orchestration Monitoring Opportunities don't happen. You create them. WebSockets Virtual Machines Kafka DNS Routing DevOps
